🐛 text aligns of h1 fixed

--- a/src/style.css
+++ b/src/style.css
@@ -54,5 +54,5 @@ body {
 }
 
 h1{
-  @apply text-5xl font-bold text-center;
+  @apply text-5xl font-bold;
 }
